--- a/composer.json
+++ b/composer.json
@@ -15,19 +15,19 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "doctrine/orm": "^2.5",
+        "php": ">=8.1",
+        "doctrine/orm": "^2.16",
         "omnipay/paypal": "^3.0",
-        "symfony/config": "^3.4 || ^4.4 || ^5.0",
-        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0",
-        "symfony/expression-language": "^3.4 || ^4.4 || ^5.0",
-        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.0",
-        "symfony/routing": "^3.4 || ^4.4 || ^5.0"
+        "symfony/config": "^4.4 || ^5.0 || ^6.0",
+        "symfony/dependency-injection": "^4.4 || ^5.0 || ^6.0",
+        "symfony/expression-language": "^4.4 || ^5.0 || ^6.0",
+        "symfony/http-kernel": "^4.4 || ^5.0 || ^6.0",
+        "symfony/routing": "^4.4 || ^5.0 || ^6.0"
     },
     "require-dev": {
         "omnipay/common": "^3.0",
         "php-http/guzzle6-adapter": "^2.0",
-        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.1"
+        "phpunit/phpunit": "^9.1"
     },
     "config": {
         "bin-dir": "bin",
